fix: bug ficus-visible section furniture in page catalog

--- a/src/scss/components/_catalogDiscount.scss
+++ b/src/scss/components/_catalogDiscount.scss
@@ -1,6 +1,7 @@
 .catalog {
 
   &__discount {
+    margin-bottom: 15px;
 
     &-form {
 
