--- a/src/scss/components/_catalogFurnitures.scss
+++ b/src/scss/components/_catalogFurnitures.scss
@@ -36,30 +36,12 @@
       z-index: 2;
       opacity: 0;
       cursor: pointer;
-
-      // &::before {
-      //   content: '';
-      //   position: absolute;
-      //   top: 0;
-      //   right: 0;
-      //   bottom: 0;
-      //   left: 0;
-      //   width: 100%;
-      //   height: 100%;
-      //   border: 2px solid var(--primary-color);
-      //   transform: translate(0, 0) scaleX(0);
-      //   transform-origin: center;
-      //   transition: transform .3s ease-in-out;
-      // }
-
-      // &:focus-visible::before {
-      //   transform: translate(0, 0) scaleX(1);
-      // }
     }
 
     &__span {
       position: relative;
       padding-left: 32px;
+      transition: color .3s ease-in-out;
 
       &::before {
         content: "";
@@ -107,6 +89,14 @@
 
   & .furniture__input:checked+.furniture__span::after {
     opacity: 1;
+  }
+
+  & .furniture__input:focus-visible:not(:hover):not(:active) + .furniture__span {
+    color: var(--primary-light-color);
+  }
+
+  & .furniture__input:focus-visible:not(:hover):not(:active) + .furniture__span::before {
+    background-color: var(--primary-light-color);
   }
 
   &__btn {
